--- a/src/App.css
+++ b/src/App.css
@@ -161,13 +161,22 @@ a{
     font-style: italic;
 }.link, .card{
     border-radius: 0px;
-    border-bottom-left-radius: 20px;
-    
+    border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
 /* .card_image:hover{
     height: 200px;
 } */
+.card {
+    display: block; 
+      margin-bottom: 20px;
+      line-height: 1.42857143;
+      background-color: #fff;
+      /* border-radius: 2px; */
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
+      transition: box-shadow .25s; 
+      /* height: 500px; */
+  }
 @media screen and (max-width: 978px) {
     .navbar-collapse{
         margin-top: 20px !important;
